Fix for image cropping

--- a/libsrc/scss/edit.scss
+++ b/libsrc/scss/edit.scss
@@ -161,6 +161,7 @@ body.edit {
     z-index: 2;
     width : 100%; height : 100%;
 }
+.happ .crop_box { width:100%; height:100%; z-index:2; }
 .select_border {
     background-color: $color_selected; position: absolute;
     border-color: $color_light_blue;
